add current info to dialogs for updating